# Perceptra

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  code_review_checklist.md  compare_with_anomalib.py  config.yml  detect.py  eval.py  export.py  main.py  pyproject.toml  requirements.txt  run.txt  setup.py  train.py  usage_example.py
anodet/: __init__.py
anomavision/: __init__.py  config.py  feature_extraction.py  general.py  mahalanobis.py  padim.py  padim_lite.py  test.py  utils.py
anomavision/datasets/: dataset.py  mvtec_dataset.py
anomavision/inference/: __init__.py  modelType.py
anomavision/inference/model/: __init__.py  wrapper.py
anomavision/inference/model/backends/: __init__.py  base.py  onnx_backend.py  openvino_backend.py  tensorrt_backend.py  torch_backend.py  torchscript_backend.py
anomavision/sampling_methods/: kcenter_greedy.py
anomavision/visualization/: __init__.py  utils.py
azure_components/: resource_group_create.py  storage_account_create.py  work_space_create.py
deployment/: deployment-k8s-config.yml  endpoint-k8s-config.yml
docker/: Dockerfile  Dockerfile.np  howto.md
environment/: Dockerfile  Dockerfile.peotry  environment.yml  environment_gpu.yml
integration/: conftest.py  prod_test.py
jobs/: data-validation-job.yml  training-job.yml
k8s/: deployment.yml  deployment_services_gpu.yml  service.yml
load_testing/: locustfile.py
monitoring/: app_insights_setup.py  drift_alert_setup.py  log_config.yaml
onnxruntime_cpp/: CMakeLists.txt  detect.cpp  main.cpp  oop_anomaly_detector.cpp  oop_anomaly_detector.h  oop_anomaly_detector.py
pipelines/: azure-mlops-pipeline.yml  sync2github.yml
pipelines/infra/: azure-ml-bootstrap.yml  azure-ml-com.yml  azure_mlops_infra.yml
pipelines/infra/templates/: attach_aks_to_workspace.yml  create_acr.yml  create_aks.yml  create_compute_cluster.yml  create_k8s_extension.yml  create_key_vault.yml  create_resource_group.yml  create_workspace.yml  install_azureml_extension.yml  register_env.yml  upload_dataset.yml
pipelines/templates/: acr_admin_login.yml  assign_acr_pull_role.yml  attach_acr_to_aks.yml  create_deployment.yml  create_endpoint.yml  data_validation.yml  deploy_acr_to_aks.yml  docker_build_np.yml  docker_tag_and_push.yml  download_model.yml  install_dependencies.yml  post_deployment_tests.yml  register_model.yml  training.yml  unit_test.yml  update_submodules.yml  use_python_3_11_0.yml
requirements/: requirements.txt  requirements_np.txt
src/: .amlignore  config.json  data_validation.py  fastapi_app.py  fastapi_app_np.py  logger.py  score.py  streamlit_app.py  test_padim.py  train.py
src/static/anodet/: __init__.py  utils.py
src/static/anodet/visualization/: __init__.py  boundary.py  frame.py  heatmap.py  highlight.py  utils.py
tests/: conftest.py  test_all_formats.py  test_anomavision.py  test_backends.py  test_datasets.py  test_export_load_model.py  test_exporter.py  test_feature_extraction.py  test_inference_utils.py  test_mahalanobis.py  test_padim.py  test_padim_lite.py  test_torch_backend_pth.py
